:lipstick: Enhance text contrast, fix img aspect ratio

--- a/src/_assets/scss/_home.scss
+++ b/src/_assets/scss/_home.scss
@@ -138,7 +138,7 @@
 
           .cover {
             width: 250px;
-            height: 150px;
+            height: 158px;
             border-radius: 5px;
             transition: all 0.2s ease-out;
             top: 0;
