--- a/src/_assets/scss/_variables.scss
+++ b/src/_assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 $background: #f6f6f6;
 $text: #333;
-$blue: #1976d2;
+$blue: #146ec8;
 $gray1: #999;
 $gray2: #666;
 $gray3: #333;
